test(service): migrate and refactor AppointmentService tests to proper implementation-based structure
EN:
- Moved tests from com.pettime.service to com.pettime.service.impl for correct package alignment
- Replaced Deprecated MockitoAnnotations with @ExtendWith(MockitoExtension)
- Ensured AppointmentServiceImpl is injected properly using @InjectMocks
- Added realistic business-rule validations: conflict detection and inactive petshop check
- Removed incorrect cross-test dependencies and cleaned test architecture
----------------------------------------------
FR:
- Déplacement des tests de com.pettime.service vers com.pettime.service.impl pour alignement des packages
- Remplacement de MockitoAnnotations obsolète par @ExtendWith(MockitoExtension)
- Injection correcte de AppointmentServiceImpl via @InjectMocks
- Ajout de validations réalistes des règles métiers : détection des conflits et vérification des petshops inactifs
- Suppression des dépendances erronées entre tests et nettoyage complet de l’architecture des tests